fix: Update sec-hdr 3,4 margin and padding for 1190 responsive spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ nav a:hover {
 /* body styling  */
 
 .page {
-    min-height: 90vh;
+    min-height: 82vh;
     padding: 0;
     margin: 0;
 }
@@ -451,6 +451,21 @@ footer {
 
     .page-odd {
         padding: .5rem var(--page-padding-1190);
+    }
+
+    .sec-hdr3 {
+        margin: 1rem 0 .1rem 5rem;
+        padding: .75rem 0 .15rem 0;
+    }
+
+    .sec-hdr4 {
+        margin: .5rem 0 .05rem 3rem;
+        padding: .25rem 0 .05rem 0;
+    }
+
+    #register-btn-container{
+        margin-top: 1.5rem;
+        padding: 0.5rem;
     }
 }
 
